[gd_scene load_steps=16 format=3 uid="uid://ca4pkvapulepb"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_p5e3r"]
[ext_resource type="PackedScene" uid="uid://dolyt5vqpc406" path="res://Assets/Armas/blasterC.glb" id="2_18i3n"]
[ext_resource type="Script" path="res://Scenes/Elements/Shoot/blaster.gd" id="3_oi1g8"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="3_qp2j7"]
[ext_resource type="Animation" uid="uid://csp3fdknowmi5" path="res://addons/godot-xr-tools/hands/animations/right/Pistol.res" id="4_e8k7n"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="5_bgjs7"]
[ext_resource type="Animation" uid="uid://ccds2u22gbxn7" path="res://addons/godot-xr-tools/hands/animations/right/Grip.res" id="5_wmloc"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="6_3st0w"]
[ext_resource type="Animation" uid="uid://ddbo6ioa282en" path="res://addons/godot-xr-tools/hands/animations/left/Pistol.res" id="7_3k2ym"]
[ext_resource type="AudioStream" uid="uid://b4cm28unil4tk" path="res://Assets/Armas/blaster.wav" id="10_npw3q"]

[sub_resource type="BoxShape3D" id="BoxShape3D_m1sg4"]
size = Vector3(0.07, 0.230273, 0.335884)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nogew"]
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 10.0
grow_amount = 0.444

[sub_resource type="CylinderMesh" id="CylinderMesh_ehruc"]
material = SubResource("StandardMaterial3D_nogew")
top_radius = 0.01
bottom_radius = 0.01
height = 10.0

[sub_resource type="Resource" id="Resource_30x7f"]
script = ExtResource("5_bgjs7")
open_pose = ExtResource("5_wmloc")
closed_pose = ExtResource("4_e8k7n")

[sub_resource type="Resource" id="Resource_apt4a"]
script = ExtResource("5_bgjs7")
open_pose = ExtResource("7_3k2ym")
closed_pose = ExtResource("7_3k2ym")

[node name="PickableObject" instance=ExtResource("1_p5e3r")]

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00576172, 0.00308593)
shape = SubResource("BoxShape3D_m1sg4")

[node name="blasterC2" parent="." index="1" instance=ExtResource("2_18i3n")]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0)
script = ExtResource("3_oi1g8")

[node name="Laser" type="MeshInstance3D" parent="blasterC2" index="1"]
transform = Transform3D(1.42857, 0, 0, 0, -6.24448e-08, -1.42857, 0, 1.42857, -6.24448e-08, 0, 0.0142857, 7.14286)
visible = false
mesh = SubResource("CylinderMesh_ehruc")
skeleton = NodePath("../..")

[node name="RayCastShot" type="RayCast3D" parent="blasterC2" index="2"]
transform = Transform3D(1.42857, 0, 0, 0, -6.24448e-08, 1.42857, 0, -1.42857, -6.24448e-08, 0, 0.0127439, 0)
enabled = false
target_position = Vector3(0, -10, 0)
collision_mask = 16384
collide_with_areas = true
collide_with_bodies = false
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 1

[node name="GrabPointHandRight" parent="." index="2" instance=ExtResource("3_qp2j7")]
transform = Transform3D(-0.997454, 0.0713059, -8.72002e-08, 0.0713059, 0.997454, 6.23376e-09, 8.74228e-08, 0, -1, 0.0112793, 0.00992006, -0.000828221)
hand_pose = SubResource("Resource_30x7f")

[node name="GrabPointHandLeft" parent="." index="3" instance=ExtResource("6_3st0w")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.0133893, 0.00160066)
hand_pose = SubResource("Resource_apt4a")

[node name="BlasterSound" type="AudioStreamPlayer3D" parent="." index="4"]
stream = ExtResource("10_npw3q")
bus = &"Effects"

[connection signal="action_pressed" from="." to="blasterC2" method="_on_activation"]
[connection signal="picked_up" from="." to="blasterC2" method="_on_pickable_object_picked_up"]
[connection signal="released" from="." to="blasterC2" method="_on_pickable_object_released"]
